# mediaStudy

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: TASKS.md
src/: config.rs  main.rs  render.rs  search.rs
src/bucket/: mod.rs
src/commands/: add.rs  bucket.rs  chat.rs  config.rs  docs.rs  generate.rs  mod.rs  quiz.rs  review.rs
src/embeddings/: mod.rs
src/ingest/: chunker.rs  mod.rs  ocr.rs  pdf.rs  text.rs  url.rs
src/llm/: groq.rs  mod.rs  whisper.rs
src/storage/: chunks.rs  conversations.rs  db.rs  documents.rs  mod.rs  study.rs
