[package]
name = "the-librarian"
version = "0.1.0"
edition = "2024"
description = "The Librarian - Your personal AI study companion. Ingest PDFs, videos, and notes, then chat, quiz, and generate study materials."
license = "MIT"

[[bin]]
name = "librarian"
path = "src/main.rs"

[dependencies]
# CLI and interactive prompts
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
inquire = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for Groq API
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PDF parsing
pdf-extract = "0.7"
lopdf = "0.34"

# Error handling
anyhow = "1"
thiserror = "1"

# Config and paths
dirs = "5"
toml = "0.8"

# Terminal styling
colored = "2"
indicatif = "0.17"
termimad = "0.30"

# Database
rusqlite = { version = "0.31", features = ["bundled", "modern_sqlite"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Local embeddings (runs ONNX models)
fastembed = "4"
scraper = "0.25.0"
html2text = "0.16.7"
url = "2.5.8"

[profile.release]
lto = true
strip = true
